fix: wrap App component with withRouter to make redux and react-router work smoothly

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -54,7 +54,8 @@ body {
 }
 
 .modal-form input,
-.modal-form textarea{
+.modal-form textarea,
+.modal-form select{
     display: block;
     margin-bottom: 15px;
     min-width: 320px;
